# signatures

./: .gitignore  Cargo.toml  README.md  sample.py
.claude/workflows/: _impl-output-flags.js  fuzz-all-languages.js  fuzz-language.js  implement-new-language.js  language-implement.js  languages-fuzz.js
scripts/: clean.sh  install.sh
src/: cli.rs  color.rs  main.rs  render.rs  signature.rs
src/lang/: bash.rs  braces.rs  lua.rs  mod.rs  python.rs  ruby.rs
tests/: bash.sh  bash.sh.expected  c.c  c.c.expected  cpp.cpp  cpp.cpp.expected  csharp.cs  csharp.cs.expected  dart.dart  dart.dart.expected  flags.sh  go.go  go.go.expected  java.java  java.java.expected  javascript.js  javascript.js.expected  kotlin.kt  kotlin.kt.expected  lua.lua  lua.lua.expected  php.php  php.php.expected  python.py  python.py.expected  ruby.rb  ruby.rb.expected  run.sh  rust.rs  rust.rs.expected  scala.scala  scala.scala.expected  swift.swift  swift.swift.expected  typescript.ts  typescript.ts.expected
tests/bash/: comments_strings.sh  comments_strings.sh.expected  constants.sh  constants.sh.expected  edge.sh  edge.sh.expected  functions.sh  functions.sh.expected  heredoc_at_toplevel.sh  heredoc_at_toplevel.sh.expected  heredoc_in_function.sh  heredoc_in_function.sh.expected  nested.sh  nested.sh.expected  realworld.sh  realworld.sh.expected  sample.sh  sample.sh.expected
tests/c/: cases.c  comments_strings.c  comments_strings.c.expected  edge.c  edge.c.expected  line_comment_continuation.c  line_comment_continuation.c.expected  macros.c  macros.c.expected  multiline_define.c  nested.c  (+8 more)
(+324 files in other folders)
